hphp/hack/test/typecheck/nonnull/enum_of_nonnull2.php
<?hh // strict

abstract class Enum<T> {}

class E extends Enum<nonnull> {
  const FOO = 'foo';
  const BAR = 42;
  const BAZ = true;
}
